@@ -38,6 +38,9 @@
                     get { return _activeScreen; }
                     set
                     {
+                        if (value != null && value.Equals(_activeScreen))
+                            return;
+
                         _changingThroughProperty = true;
 
                         OpenScreen(
@@ -146,6 +149,12 @@
                     if (screen == null)
                     {
                         completed(false);
+                        return;
+                    }
+
+                    if(screen.Equals(_activeScreen))
+                    {
+                        completed(true);
                         return;
                     }
 
